[workspace]
members = [
    "glutin",
    "glutin_examples",
    "glutin_examples/ios-example/rust",
    "glutin_egl_sys",
    "glutin_glx_sys",
    "glutin_wgl_sys",
    "glutin_gles2_sys",
    "glutin_emscripten_sys",
]

[replace]
"winit:0.22.0" = { git = 'https://github.com/kosyak/winit.git', branch = "master" }
